2008-03-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/treeviews.c, src/symbols.c, src/symbols.h:
   Save sorting order of the symbol list when saving a file (#1917262).
 * data/filetype_extensions.conf, src/filetypes.c:
   Add ".xhtml" extension for filetype XML (#1914587).


2008-03-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.txt, doc/geany.html:
   Add a note about column mode editing.
 * src/editor.c:
   Fix broken auto multiline comment with files in CR/LF mode.
 * src/win32.c:
   Fix encoding problems with project file dialogs.
 * src/plugins.c:
   Rework internal handling of plugin/module loading.
   At startup, only load enabled plugins, all others are only loaded
   when the plugin manager is opened and get completely unloaded when
   it is closed.
 * data/filetypes.caml, data/filetypes.cpp, data/filetypes.c,
   data/filetypes.d, data/filetypes.fortran, src/build.c:
   Remove old and useless code from build_link_file().
   Don't add "-o" compiler option automatically instead make it
   configurable through linker command.
 * data/filetypes.python, src/highlighting.c:
   Add additional keyword group for python and slightly change the
   foreground colour for style "word2".
 * geany.glade, src/dialogs.c, src/interface.c:
   Fix modal dialog problems on Windows by not setting taskbar hint
   (closes #1916994).


2008-03-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/projects.c: Fix wrong directory when choosing project filename
                   in the New Project dialog.
 * scintilla/Editor.cxx: Add (basic) column mode editing, pasting text
                         does not work. Patch by chuck, thanks.


2008-03-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Set main menu accelerators for keybindings.
 * src/keybindings.c, src/keybindings.h, src/plugindata.h,
   plugins/htmlchars.c:
   Make KeyBinding name and label fields non-const strings so they can