@@ -1,3 +1,11 @@
+2008-03-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/plugins.c:
+   Set mnemonic for Plugin Manager.
+   Use GTK_RESPONSE_CANCEL for Plugin Manager dialog so pressing escape
+   closes the dialog.
+
+
 2008-03-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/treeviews.c, src/symbols.c, src/symbols.h:
